--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development-First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">        
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>It is time to</h1>
+    <h1 class="First">EXPLORE ISLAM</h1>
+    <p>Islam is one of the largest religions in the world, with over 1 billion followers. It is a monotheistic faith based on revelations received by the Prophet Muhammad in 7th-century Saudi Arabia. The Arabic word islam means “submission,” reflecting the faith's central tenet of submitting to the will of God. Followers of Islam are called Muslims.</p>
+
+     
 </body>
 </html>
