--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>It is time to</h1>
-    <h1 class="First">EXPLORE ISLAM</h1>
-    <p>Islam is one of the largest religions in the world, with over 1 billion followers. It is a monotheistic faith based on revelations received by the Prophet Muhammad in 7th-century Saudi Arabia. The Arabic word islam means “submission,” reflecting the faith's central tenet of submitting to the will of God. Followers of Islam are called Muslims.</p>
+    <section>
+        <div class="sec_one">
+            <h1>It is time to</h1>
+            <h1 class="First">EXPLORE ISLAM</h1>
+            <p>Islam is one of the largest religions in the world, with over 1 billion followers. It is a monotheistic faith based on revelations received by the Prophet Muhammad in 7th-century Saudi Arabia. The Arabic word islam means “submission,” reflecting the faith's central tenet of submitting to the will of God. Followers of Islam are called Muslims.</p>
+            <a class="link-button" target="blank" href="https://en.wikipedia.org/wiki/Islam">EXPLORE...</a>
+        </div>
+        <div class="sec_one">
+            <img src="images\Pic 6.jpg" alt="">
+        </div>
+    </section>
+    
 
      
 </body>
