--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             <img src="images\Pic 6.jpg" alt="">
         </div>
     </section>
+    <h2>THE MAIN PILLARS OF ISLAM</h2>
+    <section>
+
+    </section>
     <section>
         <div class="sec_one">
-            <img src="images\Pic 5.jpg" alt="">
+            <img src="images\Pic 1.jpg" alt="">
         </div>
         <div class="sec_one">
             <h1>Allah</h1>
@@ -32,7 +36,17 @@
             <p>Allah is the creator of this universe. Among all the creations, Mankind is the best. For various reasons, many people have come to believe that Muslims worship a different God than Christians and Jews.  This is totally false, since “Allah” is simply the Arabic word for “God” - and there is only One God.  Let there be no doubt - Muslims worship the God of Noah, Abraham, Moses, David and Jesus - peace be upon them all.  However, it is certainly true that Jews, Christians and Muslims all have different concepts of Almighty God.</p>
             <a class="link-button" target="blank" href="https://en.wikipedia.org/wiki/Allah">KNOW MORE...</a>
         </div>
-        
+    </section>
+    <section>
+        <div class="sec_one">
+            <h1>Know the greatest human</h1>
+            <h1 class="First">PROPHET(S)</h1>
+            <p>The messenger of islam, Prophet Mohammad(s) was the last prophet of islam. According the google research, he was the perfect human being ever lived. At age 40, he began to have revelations from Allah that became the basis for the Quran and the foundation of Islam. By 630 he had unified most of Arabia under a single religion. As of 2022, there are over 1.8 billion Muslims in the world who profess, “There is no creator but Allah, and Muhammad is his prophet.” </p>
+            <a class="link-button" target="blank" href="https://www.worldhistory.org/Prophet_Muhammad">SEEK HERE...</a>
+        </div>
+        <div class="sec_one">
+            <img src="images\Pic 3.jpg" alt="">
+        </div>
     </section>
     
 
